2012-01-29 Roman
- !!!!:TConfig: Store string is changed from type "ResString" to "string" object and resource removed direct to TCfg object.
    Direct values access by link by functions like getSd() is dangerous for parallel access.
- !!!!:TValFunc: Store string is changed from type "ResString" to "string" object and resource removed direct to the object.
- !!!!:TVal: Store string is changed from type "ResString" to "string" object and resource used nodeRes() by the object.
- !!!!:Archives: Subsystem's modules version ABI is changed to 6.
- !!!!:DB: Subsystem's modules version ABI is changed to 6.
- !!!!:Protocol: Subsystem's modules version ABI is changed to 6.
- !!!!:Special: Subsystem's modules version ABI is changed to 6.
- !!!!:Transport: Subsystem's modules version ABI is changed to 6.
- !!!!:UI: Subsystem's modules version ABI is changed to 6.
- !:Transport.Serial: Flow control by RTS signal for pure RS-485 is added to output transport.
- FIX:DAQ.Siemens: String write is fixed by write reserved block size.


2012-01-25 Roman
- SYS: DAQ subsystem modules interface version is risen to 6.


2012-01-24 Roman
- FIX:SYS: config.h installation and using into /etc/openscada/ directory is fixed for build external OpenSCADA modules.


2012-01-24 Maxim
- FIX:UI: Vision crashing during the paste operation is fixed for the primitive ElFigure by adding the check on the shape's
		presence in the shapes' container.


2012-01-23 Roman
- DAQ.BlockCalc, DAQ.JavaLikeCalc, DAQ.LogicLev, DAQ.DCON, Transport.Sockets, Transport.Serial,
	Protocol.HTTP, Protocol.SelfSystem, UI.WebCfgD, Special.FLibComplex1, Special.FLibMath, Special.FLibSYS:
    Builtin to OpenSCADA core support is added.
- Transport.Sockets: Last repeat timeout is added for next requests repeat.


2012-01-22 Roman
- FIX:UI.Vision: Master page replace is some changed by previous remove from centralWidget().


2012-01-21 Roman
- FIX:UI.WebVision: Master page replace is fixed.