@@ -97,7 +97,7 @@
   <span id='selPath' />
  </td></tr>
  <tr class='body'>
-  <td class='tree'><div><ul id='treeRoot' class='tree' /></div></td>
+  <td id='treeBlk' class='tree'><div><ul id='treeRoot' class='tree' /></div></td>
   <td class='page'>
    <table class='page' border='0' cellspacing='0'>
     <tr><td class='title'><img id='pgIco' alt='' /><span id='pgTitle' /></td></tr>
